--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@
     width: 80%;
 }
 
+.welcome-text{
+    font-size: calc(1.775rem + 1.5vw);
+}
+
 .explanation {
     margin: auto;
     padding: 8px;
@@ -47,15 +51,24 @@
 
 
 .font2 {
-    font-family: "Cairo", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: light;
+    font-family: "Francois One", sans-serif;
+    font-weight: 400;
     font-style: normal;
 }
 
+.explanation-text {
+    font-size: calc(0.6rem + 1.1vw);
+  }
+  
+  @media (min-width: 1200px) {
+    .title {
+      font-size: 0.8rem;
+    }
+  }
+
 .container-fluid {
-    padding-left: 30px; 
-    padding-right: 30px; 
+    padding-left: 50px; 
+    padding-right: 50px; 
 }
 
 
@@ -69,14 +82,14 @@
     --bs-btn-border-color: #fd0d81;
     --bs-btn-hover-color: #ffffff;
     --bs-btn-hover-bg: #98064c;
-    --bs-btn-hover-border-color: #0a58ca;
+    --bs-btn-hover-border-color: #fd0d81;
     --bs-btn-focus-shadow-rgb: 49, 132, 253;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #0a58ca;
-    --bs-btn-active-border-color: #0a53be;
+    --bs-btn-active-bg: #fd0d81;
+    --bs-btn-active-border-color: #fd0d81;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #0d6efd;
-    --bs-btn-disabled-border-color: #0d6efd;
+    --bs-btn-disabled-bg: #fd0d81;
+    --bs-btn-disabled-border-color: #fd0d81;
 }
 
