--- a/dominos.css
+++ b/dominos.css
@@ -19,9 +19,52 @@
 .updated-last {
     background-color: rgb(36, 213, 160);
     width: 85%;
+    border: 2px solid white;
 }
 
-.source-link{
+.source-link {
     background-color: rgb(114, 55, 177);
     width: 60%;
+    border: 2px solid white;
+}
+
+.custom-box {
+    background-color: #f0f0f0;
+    border: 1px solid #000000;
+    padding: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.font3 {
+    font-family: "Teko", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: normal;
+    font-style: normal;
+    font-size: large;
+}
+
+.font4 {
+    font-family: "Lexend", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+
+.select-size, .select-crust{
+    width: 90%;
+    border: 2px solid grey; 
+    border-radius: 8px;
+    font-size: 1.2rem; 
+}
+
+.grey-border{
+    border: 2px solid grey; 
+}
+
+.form-control{
+    height:auto;
+    text-align:center;
 }
